--- a/style.css
+++ b/style.css
@@ -1,6 +1,98 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   background: url(images/pattern.png) repeat;
 }
 html {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+figure {
+  width: 100%;
+}
+
+img {
+  max-width: 100%;
+}
+
+h1 {
+  font-weight: 500;
+  color: rgb(187, 81, 187);
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pie-logo {
+  height: 4rem;
+}
+
+.menu-navigation {
+  display: flex;
+  background-color: rgb(187, 81, 187);
+  justify-content: space-between;
+  align-items: center;
+  height: 5rem;
+  padding: 0 4rem;
+}
+
+.home-menu {
+  display: flex;
+  list-style: none;
+}
+
+.home-menu li {
+  margin: 0 1rem;
+}
+
+.home-menu li a {
+  text-decoration: none;
+  font-weight: 500;
+  color: white;
+}
+
+.logo-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pies-menu {
+  list-style: none;
+}
+
+.pies-menu li {
+  padding: 15px 50px;
+  background-color: tomato;
+  margin-bottom: 3px;
+}
+
+.pies-menu li a {
+  text-decoration: none;
+  font-weight: 500;
+  color: white;
+}
+
+.bethany-page {
+  padding: 0 3rem;
+}
+
+.cheesecake-block {
+  background-color: white;
+  padding: 2rem;
+  border-radius: 10%;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+}
+
+@media (min-width: 768px) {
+  .block-main {
+    display: flex;
+  }
 }
